Jargon 2.3.0.XX Release Notes
================================================================================================

Project: Jargon - IRODS Java API
Date: 05/03/2010
Release Version: 2.3.0.X - The trunk now reflects the state of the main code tree subsequent to the release of the Jargon 2.3.0.1 patch set. The main code line
will continue with patches and upgrades to testing.  Feature development is underway in the Jargon 2.3.1 branch, and any patches here will be merged into the 2.3.1 feature branch.

================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against IRODS 2.1, IRODS2.2, and IRODS2.3

libraries
---------  

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

Bug 96  - IRODSFile.length() not reflecting length of file on resource


================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org